--- a/balloons.html
+++ b/balloons.html
@@ -9,11 +9,52 @@
     <!-- pickadate -->
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/default.date.css" />
+    <head>
+        <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+      </head>
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow|Questrial" rel="stylesheet">
+    <!-- custom css -->
+    <style>
+        h1 {
+            font-family: 'Londrina Shadow';
+            color: slategray;
+            font-size: 3.5em;
+        }
+        h1.animate__animated{
+            display: inline-block;
+        }
+        .ball{
+            visibility: hidden;
+        }
+
+        body {
+            font-family: 'Questrial';
+        }
+    </style>
+    <!-- animate -->
+    
 </head>
 <body>
 <!-- content -->
 <div class="container">
-    <h1>Happy Birthday!</h1><hr />
+    <div id="toast" class="toast">
+        <div class="toast-header">
+            <strong class="mr-auto" id="product"></strong>
+            <button type="button" id="closeX" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            <h1>You picked no Balloon!</h1>
+        </div>
+    </div>
+
+    <h1 id="HappyBirthday">Happy Birthday!</h1>
+    <hr/>
         <form role="form">
             <div class="row">
                 <div class="col-sm">
@@ -25,6 +66,29 @@
                         <label for="birthday">Birthday</label>
                         <input type="text" class="form-control" id="birthday" placeholder="Enter birthday" />
                     </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Select your favorite balloons</h5>
+
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="red">
+                                <label class="form-check-label" for="red">Red balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="green">
+                                <label class="form-check-label" for="green">Green balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="blue">
+                                <label class="form-check-label" for="blue">Blue balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <button class="btn btn-primary" type="button" id="checkAll">Check All</button>
+
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-outline-primary mt-3" id="submit">Submit</button>
                 </div>
                 <div class="col-sm">
                     <img src="media/red.png" class="ball" alt="red balloon" id="redImg" />
