--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
                         <a class="dropdown-item" href="#"><i class="fas fa-sign-in-alt"></i> Sign In</a>
                     </div>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="balloons.html" id="balloon">
+                        Balloon
+                    </a>
+                </li>
+
+
             </ul>
             
             <form class="form-inline ml-auto d-none d-md-block">
