--- a/balloons.html
+++ b/balloons.html
@@ -108,8 +108,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 <!-- pickadate -->
-<script src="/js/picker.js"></script>
-<script src="/js/picker.date.js"></script>
+<script src="js/picker.js"></script>
+<script src="js/picker.date.js"></script>
 <!-- custom js -->
 <script src="js/balloons.js"></script>
 </body>
